2009-02-13  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 570533 – use g_set_error_literal

	* daemon/gvfsbackendobexftp.c: (_push_single_file_helper):
	* daemon/gvfsbackendtrash.c: (trash_backend_get_file),
	(trash_backend_open_for_read), (trash_backend_delete),
	(trash_backend_pull):
	* daemon/trashlib/trashitem.c: (trash_item_delete):
	use g_set_error_literal() when appropriate.
	Patch by Christian Persch.

2009-02-13  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 531705 – Won't build with libarchive 1.3.1

	* configure.ac: check for archive_entry_filetype() instead of
	archive_read_open(). Patch from Tom Parker.

2009-02-05  Bastien Nocera  <hadess@hadess.net>

	Bug 563788 – GNOME Goal: Clean up GLib and GTK+ includes

	* client/gvfsuriutils.h:
	* daemon/gvfsbackendburn.c:
	* daemon/gvfsbackendcomputer.c:
	* daemon/gvfsbackenddnssd.c:
	* daemon/gvfsbackendnetwork.c:
	* daemon/gvfsdaemonutils.c:
	* daemon/mount.c: Fix build for single GTK+ include, patch
	from Luis Menina <liberforce@freeside.fr> (Closes: #563788)

2009-02-04  Ryan Lortie  <desrt@desrt.ca>

	Bug 570481 – Please add translator comments

	* daemon/gvfsbackendtrash.c: use clearer language to make it easier to
	translate (not to mention, easier to understand in English).
	
2009-02-03  Bastien Nocera  <hadess@hadess.net>

	Bug 570193 – Mounting phone connected via Bluetooth fails

	* daemon/gvfsbackendobexftp.c (_get_bluetooth_device_properties):
	Use a private connection to connect to the system D-Bus, thanks
	to Alexander Larsson

2009-02-03  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (do_mount): Fix
	possible double-free when the display name is freed
	Avoid errors when the icon name couldn't be gathered

2009-02-02  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.1.5 ===

2009-02-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2009-02-02  Bastien Nocera  <hadess@hadess.net>
